update local-env.sh template with throughput-oriented JVM options